--- a/components/style.css
+++ b/components/style.css
@@ -87,30 +87,6 @@ body.fixed {
   max-width: 30%;
 }
 
-.fixed-menu-list-block {
-  background: white;
-  position: fixed;
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  bottom: 0;
-  overflow-y: scroll;
-  box-shadow: 0px -11px 13px 0px #00000007;
-}
-.fixed-menu-list-block .link {
-  padding: 16px;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  color: black;
-  transition: color 0.3s ease;
-}
-.fixed-menu-list-block .link.active {
-  color: red;
-}
-
 header {
   min-width: 310px;
   width: 100%;
@@ -133,90 +109,6 @@ header nav {
   align-items: center;
   background: red;
 }
-header nav .nav-items-block {
-  backdrop-filter: blur(10px);
-  z-index: 2;
-  width: 261px;
-  position: absolute;
-  left: -100%;
-  top: 0;
-  background: #000;
-  background: rgba(41, 52, 58, .7);
-  height: 100%;
-  padding: 20px;
-  transition: all 0.3s ease;
-}
-header nav .nav-items-block.active {
-  left: 0;
-}
-header nav .nav-items-block .language-container {
-  width: 100%;
-  height: 35px;
-  display: grid;
-  grid-template-columns: repeat(2, 50%);
-  background-color: rgba(255, 255, 255, 0.15);
-  border-radius: 25px;
-  padding: 2px;
-  margin: 15px 0;
-}
-header nav .nav-items-block .language-container div {
-  text-transform: uppercase;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 25px;
-  transition: all 0.3s ease;
-}
-header nav .nav-items-block .language-container div.active {
-  background: white;
-  color: black;
-}
-
-header nav .nav-items-block .feedback {
-  display: block;
-  margin-top: 15px;
-  color: #aaaaaa;
-}
-
-.pizza-list-container a {
-  color: #000 !important;
-}
-.pizza-list-container .list-title {
-  z-index: 1;
-  padding: 15px 20px;
-  position: sticky;
-  top: 0;
-  backdrop-filter: blur(6px);
-  background: rgba(255, 255, 255, .7);
-}
-.pizza-list-container .list-title h2 {
-  font-size: 26px;
-  text-align: left;
-}
-.pizza-list-container .pizza-list {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: flex-start;
-  border-top: solid 1px #e5e5e5;
-  border-bottom: solid 1px #e5e5e5;
-  padding: 10px 10px 10px 0;
-}
-.pizza-list-container .pizza-list img {
-  max-width: 45%;
-  margin-right: 15px;
-}
-.pizza-list-container .pizza-list .description p {
-  text-align: left;
-  font-size: 14px;
-  margin: 8px 0;
-}
-.pizza-list-container .pizza-list .description h3 {
-  text-align: left;
-  font-size: 18px;
-}
-
 .log-in-body {
   min-height: -webkit-fill-available;
   height: -webkit-fill-available;
@@ -229,39 +121,8 @@ header nav .nav-items-block .feedback {
   align-items: center;
   justify-content: center;
 }
-.form-block .form {
-  display: block;
-  padding: 25px;
-}
 .form-block .form .birthday {
   margin-top: 15px;
-}
-.form-block .form h2 {
-  text-align: center;
-  margin-bottom: 30px;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 16px;
-  line-height: 16px;
-  /* identical to box height */
-  display: flex;
-  align-items: center;
-  color: #353535;
-}
-.form-block .form .tel-input-block {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  border-bottom: solid 1px #e5e5e5;
-}
-.form-block .form .tel-input-block img {
-  margin-right: 10px;
-}
-.form-block .form .tel-input-block input {
-  padding-bottom: 0;
-  border: none;
-  width: 80%;
 }
 .form-block .form .password-input-block {
   margin-bottom: 45px;
@@ -337,87 +198,8 @@ header nav .nav-items-block .feedback {
   max-width: 100% !important;
 }
 
-.pizza-construct-container {
-  max-width: 430px;
-  min-width: 310px;
-  margin: 0 auto;
-  text-align: center;
-  position: absolute;
-  top: 53px;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 100%;
-}
-.pizza-construct-container h2 {
-  margin: 15px 0 0 0;
-}
-.pizza-construct-container .pizza-construct-block {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  box-shadow: 0px 15px 30px #e5e5e5;
-  border-radius: 25px 25px 0 0;
-  text-align: left;
-}
 .secondry-text {
   color: #c8c8c8;
-}
-.pizza-construct-container .pizza-construct-block h5 {
-  font-style: normal;
-  font-weight: normal;
-  font-size: 18px;
-  line-height: 18px;
-  /* identical to box height */
-  text-align: left;
-  color: #323232;
-  margin-bottom: 20px;
-  margin-top: 30px;
-}
-.type-choose {
-  display: grid;
-  margin-bottom: 15px;
-  padding: 0 20px;
-}
-.type-choose .choose-block {
-  display: flex !important;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  height: 40px;
-  border-radius: 100px;
-  padding: 0 3px;
-  background: linear-gradient(180deg, #F8F8F8 0%, #F5F5F5 100%) !important;
-}
-.type-choose .choose-block .block {
-  /* max-width: 33.33%; */
-  width: 100%;
-  color: #c8c8c8;
-  height: calc(100% - 6px);
-  padding: 7px 0;
-  border-radius: 100px;
-}
-.type-choose .choose-block .block.active {
-  box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.25);
-  border-radius: 100px;
-  background: white;
-  color: #323232;
-  font-weight: bold;
-}
-.type-choose .choose-block .block p {
-  text-align: center;
-  font-size: 14px;
-}
-.type-choose.type-of-pizza .choose-block {
-  display: grid;
-  grid-template-columns: repeat(3, 33.33%);
-  background: #e5e5e5;
-}
-.type-choose.type-of-pizza .choose-block .block {
-  border-radius: 50px;
-}
-.type-choose.type-of-pizza .choose-block .block.active {
-  background: white;
 }
 .construct-pizza-list {
   display: grid;
@@ -622,14 +404,6 @@ header nav .nav-items-block .feedback {
 .main-block {
   padding-bottom: 55px;
 }
-.ingridient-block {
-  width: 100%;
-  border-radius: 10px;
-  background: #fff;
-  display: grid;
-  grid-template-columns: 47% 47%;
-  grid-gap: 20px;
-}
 .ingridient-control {
   width: 100%;
   height: auto;
@@ -650,10 +424,10 @@ header nav .nav-items-block .feedback {
   transition: all .3s ease;
 }
 
-.ingridient-btn.active {
+/* .ingridient-btn.active {
   background: #c0fdd1;
   transform: scale(1.1);
-}
+} */
 
 .ingridient-btn .ingridient-plus, .ingridient-minus {
   background: white;
@@ -667,11 +441,6 @@ header nav .nav-items-block .feedback {
   top: 15px;
   left: 15px;
   transition: all .3s ease;
-}
-
-.ingridient-btn.active .ingridient-plus {
-  background: transparent;
-  left: 70%;
 }
 
 .ingridient-btn.active .ingridient-plus span {
