--- a/components/style.css
+++ b/components/style.css
@@ -6,510 +6,5 @@
   outline: none;
   text-decoration: none;
   list-style: none;
-  
-}
-
-.submit-btn {
-  margin-top: 3em;
-}
-
-.construct-img {
-  max-width: 100%;
-}
-
-h3 {
-  font-weight: 600 ;
-}
-
-a {
-  color: white;
-}
-
-.main-container {
-  max-width: 1180px;
-  margin: 0 auto;
-}
-
-body.fixed {
-  overflow: hidden;
-}
-
-.fixed-cart-container {
-  width: 50px;
-  height: 50px;
-  background: #EA2E2E;
-  border-radius: 50%;
-  border: solid 2px #fff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: fixed;
-  right: 25px;
-  bottom: 75px;
-  z-index: 10;
-}
-.fixed-cart-container .cart-count {
-  background: #EA2E2E;
-  border: solid 1px #fff;
-  position: absolute;
-  color: white;
-  height: 20px;
-  width: 20px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 50%;
-  top: -5px;
-  right: -5px;
-}
-
-.fixed-order-block-container {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  z-index: 10;
-  text-align: left;
-  color: #353535;
-  position: fixed;
-  left: 25px;
-  right: 100px;
-  bottom: 75px;
-  padding: 20px;
-  border-radius: 30px;
-  background: linear-gradient(180deg, #F8F8F8 0%, #F5F5F5 100%);
-  box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.103);
-}
-.fixed-order-block-container .text {
-  margin-right: 15px;
-}
-.fixed-order-block-container img {
-  max-width: 30%;
-}
-
-header {
-  min-width: 310px;
-  width: 100%;
-}
-header .log-in-back-btn {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-header .log-in-back-btn img {
-  transform: rotateZ(-90deg);
-  margin-right: 10px;
-}
-header nav {
-  padding: 15px 10px;
-  color: white;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  background: red;
-}
-.log-in-body {
-  min-height: -webkit-fill-available;
-  height: -webkit-fill-available;
-}
-
-.form-block {
-  width: 100%;
-  display: flex;
-  position: absolute;
-  align-items: center;
-  justify-content: center;
-}
-.form-block .form .birthday {
-  margin-top: 15px;
-}
-.form-block .form .password-input-block {
-  margin-bottom: 45px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  border-bottom: solid 1px #e5e5e5;
-}
-.form-block .form .password-input-block input {
-  padding-bottom: 0;
-  border: none;
-}
-.form-block .form .input-block {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  border-bottom: solid 1px #e5e5e5;
-}
-.form-block .form .input-block input {
-  padding-bottom: 0;
-  border: none;
-}
-.form-block .form input {
-  width: 100%;
-  height: 35px;
-  border: none;
-  border-bottom: solid 1px #e5e5e5;
-  padding: 10px;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 18px;
-  display: flex;
-  align-items: center;
-  color: #353535;
-}
-.form-block .form input:first-child {
-  width: 80%;
-}
-.form-block .form input::-moz-placeholder {
-  font-style: normal;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 18px;
-  display: flex;
-  align-items: center;
-  color: #353535;
-}
-.form-block .form input:-ms-input-placeholder {
-  font-style: normal;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 18px;
-  display: flex;
-  align-items: center;
-  color: #353535;
-}
-.form-block .form input::placeholder {
-  font-style: normal;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 18px;
-  display: flex;
-  align-items: center;
-  color: #353535;
-}
-.form-block .form input:last-child {
-  margin-bottom: 10px;
-}
-.size-of-pizza .choose-block .block {
-  max-width: 100% !important;
-}
-
-.secondry-text {
-  color: #c8c8c8;
-}
-.construct-pizza-list {
-  display: grid;
-  grid-template-columns: repeat(3, 30%);
-  grid-gap: 16px;
-  align-items: center;
-  justify-content: center;
-  justify-items: center;
-  justify-self: center;
-  text-align: center;
-}
-.construct-pizza-list img {
-  display: block;
-  max-width: 100%;
-  margin: 0 auto;
-}
-.construct-pizza-list li {
-  position: relative;
-}
-.construct-pizza-list li .info-activator {
-  position: absolute;
-  right: -5px;
-  top: -5px;
-}
-
-.total-pizza-info {
-  display: flex;
-  flex-direction: column;
-  background: white;
-}
-.total-pizza-info li {
-  background: #f8f8f8;
-  border-radius: 8px;
-  margin-bottom: 10px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  padding: 15px 0 15px 20px;
-}
-.total-pizza-info li:last-child {
-  padding: 15px 20px 15px 0;
-}
-.total-pizza-info li .text {
-  height: -webkit-max-content;
-  height: -moz-max-content;
-  height: max-content;
-  max-width: 220px;
-}
-.total-pizza-info li .text h3 {
-  font-style: normal;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 150%;
-  /* or 21px */
-  display: flex;
-  align-items: center;
-  color: #070707;
-}
-.total-pizza-info li .text p {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 150%;
-  /* or 21px */
-  display: flex;
-  align-items: center;
-  color: #070707;
-}
-
-.total-pizza-info-contaienr {
-  padding: 0;
-}
-
-@media screen and (max-height: 707px) {
-  .total-pizza-info-contaienr {
-    top: 60px;
-    bottom: inherit;
-  }
-}
-
-.float-block-bg {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background: rgba(0, 0, 0, 0.1);
-  z-index: 5;
-  display: none;
-}
-.float-block-bg.active {
-  display: block;
-}
-
-.float-block-container {
-  display: none;
-  max-width: 320px;
-  width: calc(100% - 30px);
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background: #FFFFFF;
-  box-shadow: 0px 0px 75px rgba(0, 0, 0, 0.15);
-  border-radius: 8px;
-  text-align: center;
-  z-index: 6;
-  padding: 30px 20px;
-}
-.float-block-container.active {
-  display: block;
-}
-.float-block-container img {
-  margin-bottom: 20px;
-}
-.float-block-container .cancel-btn {
-  position: absolute;
-  top: 15px;
-  right: 15px;
-  z-index: 7;
-}
-.float-block-container .text h3 {
-  font-style: normal;
-  font-weight: bold;
-  font-size: 18px;
-  line-height: 150%;
-  color: #070707;
-  margin-bottom: 10px;
-}
-.float-block-container .text P {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 150%;
-  color: #808080;
-}
-
-.profile-container {
-  max-width: 550px;
-  margin: 0 auto;
-  padding: 20px;
-}
-.profile-container h2 {
-  font-style: normal;
-  font-weight: bold;
-  font-size: 16px;
-  line-height: 16px;
-  /* identical to box height */
-  display: flex;
-  align-items: center;
-  color: #000000;
-}
-.profile-container .confidential {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: flex-start;
-  margin-bottom: 15px;
-}
-.profile-container .confidential img {
-  margin-right: 15px;
-}
-.profile-container .block img {
-  position: absolute;
-}
-.profile-container input {
-  padding-left: 25px;
-  padding-bottom: 5px;
-  width: 100%;
-  border: none;
-  border-bottom: solid 1px #e7e7e7;
-  margin-bottom: 15px;
-}
-.profile-container input:focus {
-  border-bottom: solid 1px #00AB49;
-}
-.address {
-  display: flex;
-  flex-direction: row;
-}
-.address img {
-  margin-right: 15px;
-}
-
-.main-wrapper {
-  max-width: 550px;
-  margin: 0 auto;
-}
-.sum p {
-  margin: 0 10px 0 0 !important;
-}
-.order-date {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: flex-end;
-}
-.pizza-order .block {
-  margin-bottom: 1em !important;
-}
-.main-block {
-  padding-bottom: 55px;
-}
-.ingridient-control {
-  width: 100%;
-  height: auto;
-  background: transparent;
-  border-radius: 15px;
-  position: relative;
-  padding-bottom: 30px;
-}
-
-.ingridient-btn {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  background: #fafafa;
-  border-radius: 15px;
-  padding-bottom: 15px;
-  transition: all .3s ease;
-}
-
-/* .ingridient-btn.active {
-  background: #c0fdd1;
-  transform: scale(1.1);
-} */
-
-.ingridient-btn .ingridient-plus, .ingridient-minus {
-  background: white;
-  width: 36px;
-  height: 36px;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  top: 15px;
-  left: 15px;
-  transition: all .3s ease;
-}
-
-.ingridient-btn.active .ingridient-plus span {
-  transition: all .3s ease;
-  background: #3a3a3a;
-}
-
-.ingridient-btn.active .ingridient-plus span:last-child {
-  transform: rotateZ(45deg);
-}
-
-.ingridient-btn.active .ingridient-plus span:first-child {
-  transform: rotateZ(-45deg);
-}
-
-.ingridient-btn .ingridient-minus {
-  background: transparent;
-}
-
-.ingridient-btn .ingridient-plus span {
-  width: 18px;
-  height: 2px;
-  border-radius: 100px;
-  background: #00ab49;
-  display: block;
-}
-
-.ingridient-btn .ingridient-minus span {
-  width: 18px;
-  height: 2px;
-  border-radius: 100px;
-  background: #323232;
-  display: block;
-}
-
-.ingridient-btn .ingridient-plus span:first-child {
-  position: absolute;
-  transform: rotateZ(90deg);
-}
-
-.ingridient-btn .ingridient-minus span:first-child {
-  position: absolute;
-  transform: rotateZ(45deg);
-}
-
-.ingridient-btn .ingridient-minus span:last-child {
-  position: absolute;
-  transform: rotateZ(-45deg);
-}
-
-/*map container*/
-
-.maps-container {
-  position: absolute;
-  top: 52px;
-  bottom: 0;
-  left: 0;
-  right: 0;
-}
-
-.my-location-btn {
-  position: absolute;
-  height: 45px;
-  width: 45px;
-  border-radius: 50%;
-  background: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  bottom: 25px;
-  right: 25px;
+  font-family: "Jost", sans-serif;
 }
